--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/cabin-sketch": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
